<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context= ".MainActivity">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/articulate_english_practice_chatbot"
        android:textSize="23sp"
        android:textColor="#527071"
        android:textStyle="bold"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/you_will_be_chatting_with_a_movie_recommendation_chatbot"
        android:textSize="13sp"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/the_more_you_talk_the_more_you_have_the_opportunity_to"
        android:textSize="13sp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/improve_your_communication_skills"
        android:textSize="13sp"
        android:layout_marginTop="3dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/we_will_give_you_the_bonus_if_you_express_more_for"
        android:textSize="13sp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/each_conversation"
        android:textSize="13sp"
        android:layout_marginTop="3dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/after_talking_with_the_chatbot_please_wait_a_little_bit_while"
        android:textSize="13sp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/we_generate_the_grammar_feedback_for_you"
        android:textSize="13sp"
        android:layout_marginTop="3dp" />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_chat"
        android:layout_marginTop="140dp"
        android:layout_gravity="center_horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-3dp" />

</LinearLayout>